frontend/test/context/success/shadow-globaldef-with-param.fc
int g = 1;

void foo(bool g) {
    g = true;
}
