frontend/test/context/error/redefined-globaldef.fc
int g = 1;

bool g = true;
